fix #61, add test case

--- a/test.html
+++ b/test.html
@@ -79,6 +79,7 @@ button {
 
 <h3>Static LaTeX rendering (<code>.mathquill-embedded-latex</code>) tests</h3>
 <table>
+<tr><td><span class="mathquill-embedded-latex">^{\frac{as}{ }df}</span><td><span>^{\frac{as}{ }df}</span>
 <tr><td><span class="mathquill-embedded-latex">e^{i\pi}+1=0</span><td><span>e^{i\pi}+1=0</span>
 <tr><td><span class="mathquill-embedded-latex">\nthroot{n}{1}</span><td><span>\nthroot{n}{1}</span>
 <tr><td><span class="mathquill-embedded-latex">\left ( n+1 \right ) + \frac{1}{\frac{n}{k}}</span><td><span>\left ( n+1 \right ) + \frac{1}{\frac{n}{k}}</span>
