add focus/blur to API, don't interfere with DOM focus/blur
before, we'd listen to focus/blur on the MathQuill root span and
trigger it on the textarea, but in some browsers this bubbles, so to
avoid infinite looping, we'd stopPropagation() in the textarea handler.

In ways I don't fully understand, this made detecting focus/blur from
outside MathQuill (via the jQuery focusin/out events) unreliable,
in particular, if you clicked on the math and then left and then clicked
again, there would be a focusin event the first time, but successive
clicks trigger no focusin events even though the textbox is visibly
blurring and focusing.

The solution I settled on is to have an API call to set focus or blur,
and never interfere with actual HTML DOM focus/blur events. Note this
also means the initializing blur() has to be called on the textarea now.

This is what CodeMirror 2 and ACE (Cloud9) both do, as of
https://github.com/marijnh/CodeMirror2/blob/8ba416d5cac2de28a6da9bbc966b8b8761850358/lib/codemirror.js
and
https://github.com/ajaxorg/ace/blob/51b15d35889148f3bd21060bba5cbb32670e36ff/lib/ace/editor.js

--- a/demo.html
+++ b/demo.html
@@ -57,7 +57,7 @@ code span {
 
 <p>LaTeX math can also have textboxes inside: <span class="mathquill-embedded-latex">\int\editable{}dx</span> or even <span class="mathquill-embedded-latex">\sqrt{\editable{x^2+y^2}}</span></p>
 
-<p>This button runs the JavaScript code written on it to MathQuill-ify the following <code>&lt;span&gt;</code> element into an editable math textbox: <button onclick="$(this).text('$(this).next().mathquill(\'revert\')').next().mathquill('editable').focus(); var orig = arguments.callee; this.onclick = function(){  $(this).text('$(this).next().mathquill(\'editable\').focus()').next().mathquill('revert'); this.onclick = orig;$};">$(this).next().mathquill('editable').focus()</button>
+<p>This button runs the JavaScript code written on it to MathQuill-ify the following <code>&lt;span&gt;</code> element into an editable math textbox: <button onclick="$(this).text('$(this).next().mathquill(\'revert\')').next().mathquill('editable').mathquill('focus'); var orig = arguments.callee; this.onclick = function(){  $(this).text('$(this).next().mathquill(\'editable\').mathquill(\'focus\')').next().mathquill('revert'); this.onclick = orig;$};">$(this).next().mathquill('editable').mathquill('focus')</button>
 <span>\frac{d}{dx}\sqrt{x} = \frac{d}{dx}x^{\frac{1}{2}} = \frac{1}{2}x^{-\frac{1}{2}} = \frac{1}{2\sqrt{x}}</span></p>
 
 </div>
@@ -86,7 +86,7 @@ $(function() {
 //      location.hash = '#'+latex; //extremely performance-crippling in Chrome for some reason
       htmlSource.text(printTree(latexMath.mathquill('html')));
     });
-  }).keydown().focus();
+  }).keydown().mathquill('focus');
 
   latexSource.bind('keydown keypress', function() {
     var oldtext = latexSource.val();
@@ -100,7 +100,7 @@ $(function() {
   });
 
   if(location.hash && location.hash.length > 1)
-    latexMath.mathquill('latex', decodeURIComponent(location.hash.slice(1))).focus();
+    latexMath.mathquill('latex', decodeURIComponent(location.hash.slice(1))).mathquill('focus');
 });
 
 //print the HTML source as an indented tree. TODO: syntax highlight
