mouse{down,move} not stopPropagation'd anymore
now must use triggerHandler when passing external mousedown Event object

--- a/test/visual.html
+++ b/test/visual.html
@@ -179,7 +179,7 @@ $.fn.prepend = function(el) {
 
 // test selecting from outside the mathquill editable
 $('.math-container').mousedown(function(e) {
-  $(this).find('.mathquill-editable').trigger(e);
+  $(this).find('.mathquill-editable').triggerHandler(e);
 });
 
 // Selection Tests
