--- a/test/visual.html
+++ b/test/visual.html
@@ -167,19 +167,26 @@ window.onerror = function() {
 </script>
 <script type="text/javascript" src="../build/mathquill.js"></script>
 <script type="text/javascript">
+window.log = $.noop;
+
+var _prepend = $.fn.prepend;
 $('#show-textareas-button').click(function() {
   $(document.body).toggleClass('show-textareas');
   $('.textarea,.shown-textarea').toggleClass('textarea shown-textarea');
+  if ($.fn.prepend === _prepend) {
+    //FUGLY HACK: monkey-patch jQuery to show/hide static math textareas when prepended
+    $.fn.prepend = function(el) {
+      if ($(el).hasClass('textarea') && $(document.body).hasClass('show-textareas'))
+        $(el).removeClass('textarea').addClass('shown-textarea');
+      else if ($(el).hasClass('shown-textarea'))
+        $(el).removeClass('shown-textarea').addClass('textarea');
+      return _prepend.apply(this, arguments);
+    };
+  }
+  else {
+    $.fn.prepend = _prepend;
+  }
 });
-//FUGLY HACK: monkey-patch jQuery to show/hide static math textareas when prepended
-var _prepend = $.fn.prepend;
-$.fn.prepend = function(el) {
-  if ($(el).hasClass('textarea') && $(document.body).hasClass('show-textareas'))
-    $(el).removeClass('textarea').addClass('shown-textarea');
-  else if ($(el).hasClass('shown-textarea'))
-    $(el).removeClass('shown-textarea').addClass('textarea');
-  return _prepend.apply(this, arguments);
-};
 
 // test selecting from outside the mathquill editable
 $('.math-container').mousedown(function(e) {
@@ -229,15 +236,48 @@ function Avgs() {
     }
   };
 }
+var performance = window.performance || Date;
+window.rawLogs = [];
+function timeAndLog(f) {
+  var currentLog = [];
+  window.log = function(msg) {
+    currentLog.push({ msg: msg, now: performance.now() });
+  };
+  var start = performance.now();
+  f();
+  var duration = performance.now() - start;
+  window.log = $.noop;
+
+  var timeline = [], prev = 0;
+  for (var i = 0; i < currentLog.length; i += 1) {
+    var now = Math.round((currentLog[i].now - start)*1000);
+    timeline.push(now + ': [' + (now - prev) + 'µs] ' + currentLog[i].msg);
+    prev = now;
+  }
+  timeline = timeline.join('\n');
+
+  rawLogs.push({
+    start: start,
+    duration: duration,
+    log: currentLog,
+    timeline: timeline
+  });
+  if (timeline.length) {
+    // for tablets without a console
+    if (location.hash === '#alert') alert(timeline);
+    else console.log(timeline);
+  }
+  return duration;
+};
 (function() {
   var textarea = $('#latex-render-perf textarea');
   var mathquill = $('#latex-render-perf .mathquill-editable');
   var avgs = Avgs();
   $('#latex-render-perf button').click(function() {
     var latex = textarea.val();
-    var before = Date.now();
-    mathquill.mathquill('latex', latex);
-    var duration = Date.now() - before;
+    var duration = timeAndLog(function() {
+      mathquill.mathquill('latex', latex);
+    });
     $('#html-render-perf').after('<p>'+duration+'ms rendering <code>'+latex+'</code>, for an average of '+avgs.add(latex, duration)+'</p>');
     $('#html-render-perf textarea').val(mathquill.mathquill('html'));
   });
@@ -248,9 +288,9 @@ function Avgs() {
   var avgs = Avgs();
   $('#html-render-perf button').click(function() {
     var html = textarea.val();
-    var before = Date.now();
-    span.html(html);
-    var duration = Date.now() - before;
+    var duration = timeAndLog(function() {
+      span.html(html);
+    });
     $('<p>'+duration+'ms rendering <code></code>, for an average of '+avgs.add(html, duration)+'</p>').find('code').text(html).end()
       .insertAfter('#html-render-perf');
   });
