--- a/test/visual.html
+++ b/test/visual.html
@@ -167,8 +167,6 @@ window.onerror = function() {
 </script>
 <script type="text/javascript" src="../build/mathquill.js"></script>
 <script type="text/javascript">
-window.log = $.noop;
-
 var _prepend = $.fn.prepend;
 $('#show-textareas-button').click(function() {
   $(document.body).toggleClass('show-textareas');
@@ -240,13 +238,13 @@ var performance = window.performance || Date;
 window.rawLogs = [];
 function timeAndLog(f) {
   var currentLog = [];
-  window.log = function(msg) {
+  $.fn.mathquill.setLogFn(function(msg) {
     currentLog.push({ msg: msg, now: performance.now() });
-  };
+  });
   var start = performance.now();
   f();
   var duration = performance.now() - start;
-  window.log = $.noop;
+  $.fn.mathquill.setLogFn($.noop);
 
   var timeline = [], prev = 0;
   for (var i = 0; i < currentLog.length; i += 1) {
