rm logging from MathQuill
keep in test page for now so we can use later, I guess? The whole test
page needs to be cleaned up anyway

(cherry picked from commit ac818b7ba2eaddbc609d98f76a6fff73f5a00437)

--- a/test/visual.html
+++ b/test/visual.html
@@ -237,6 +237,7 @@ function Avgs() {
 }
 var performance = window.performance || Date;
 window.rawLogs = [];
+$.fn.mathquill.setLogFn = $.fn.mathquill.setLogFn || $.noop;
 function startLog() {
   var currentLog = [];
   $.fn.mathquill.setLogFn(function(msg) {
