rm logging from MathQuill
keep in test page for now so we can use later, I guess? The whole test
page needs to be cleaned up anyway

--- a/test/visual.html
+++ b/test/visual.html
@@ -236,6 +236,7 @@ function Avgs() {
 }
 var performance = window.performance || Date;
 window.rawLogs = [];
+$.fn.mathquill.setLogFn = $.fn.mathquill.setLogFn || $.noop;
 function timeAndLog(f) {
   var currentLog = [];
   $.fn.mathquill.setLogFn(function(msg) {
