--- a/test/visual.html
+++ b/test/visual.html
@@ -236,14 +236,14 @@ function Avgs() {
 }
 var performance = window.performance || Date;
 window.rawLogs = [];
-function timeAndLog(f) {
+function startLog() {
   var currentLog = [];
   $.fn.mathquill.setLogFn(function(msg) {
     currentLog.push({ msg: msg, now: performance.now() });
   });
-  var start = performance.now();
-  f();
-  var duration = performance.now() - start;
+  return currentLog;
+}
+function finishLog(currentLog, start) {
   $.fn.mathquill.setLogFn($.noop);
 
   var timeline = [], prev = 0;
@@ -252,12 +252,17 @@ function timeAndLog(f) {
     timeline.push(now + ': [' + (now - prev) + 'µs] ' + currentLog[i].msg);
     prev = now;
   }
-  timeline = timeline.join('\n');
+  return timeline.join('\n');
+}
+function timeAndLog(f) {
+  var log = startLog(), start = performance.now();
+  f();
+  var duration = performance.now() - start, timeline = finishLog(log, start);
 
   rawLogs.push({
     start: start,
     duration: duration,
-    log: currentLog,
+    log: log,
     timeline: timeline
   });
   if (timeline.length) {
