Don't block scroll when touch swipe starts in MathQuill
Argghhhhh. Want touch swipes to scroll the page, even if they start in
MathQuill (so that it's possible to scroll an expression list filled to
the brim with nothing but MathQuills) but touch taps to place the
cursor. Now, with mouse events, if all you care about is a logical
"click" on the current platform, you just listen for the click event and
the browser will take care of whether a particular sequence of
mousedown-mousemoves-mouseup is a click or not. With touch events,
there's no equivalent logical "tap" event, and while legacy mouse events
do fire if you don't preventDefault() on touchstart, Safari on iOS waits
a glacial ~350ms after a tap in case you're actually doing the
double-tap gesture (which doesn't fire any events). As a result there
are dozens of blog posts about and shitty JS libraries for "fast clicks"
across the Web, including [this widely cited Google Developers
article][1], that vary widely in how much your finger is allowed to
wiggle during the tap.

Desmos already has a tap-event library, so for consistency I just expose
an API call for the client to tell MathQuill when it thinks a logical
tap has happened. Given the touchstart target and the touchend
coordinates, MathQuill takes care of ignoring the tap if it was on the
cursor handle and doing document.elementFromPoint() on the touchend
coordinates and dealing with whether it's inside the math field or not.
(This required moving elAtPt() to the MathQuill-global scope and adding
a `root` block argument.)

But wait, there's more! Not only are the legacy mouse events unhelpful,
they're misleading because there is no way whatsoever to tell them apart
from real mouse events and no way to get them not to fire except calling
preventDefault(), which breaks touch-swipe-to-scroll. So with
heart-wrenching dispair, I expose an API call to ignore the next mouse
events (and hence not hide the cursor handle) up to a timeout, meant to
be called on touche

--- a/test/visual.html
+++ b/test/visual.html
@@ -72,7 +72,7 @@ td {
   <td><span class="mathquill-textbox">lolwut $a^2 + b^2 = c^2$.  Also, awesomesauce: $\int_0^1 \sin x dx.</span>
 </table>
 
-<p>Clicks/mousedown to drag should work anywhere in the blue box: <div class="math-container" style="border: solid 1px lightblue; height: 5em; width: 15em; line-height: 5em; text-align: center"><span class="mathquill-editable">a_2 x^2 + a_1 x + a_0 = 0</span></div>
+<p>Clicks/mousedown to drag should work anywhere in the blue box: <div class="math-container" style="border: solid 1px lightblue; height: 5em; width: 15em; line-height: 5em; text-align: center; -webkit-tap-highlight-color: rgba(0,0,0,0)"><span class="mathquill-editable">a_2 x^2 + a_1 x + a_0 = 0</span></div>
 
 <h3>Redrawing</h3>
 <p>
@@ -186,8 +186,20 @@ $('#show-textareas-button').click(function() {
 });
 
 // test selecting from outside the mathquill editable
-$('.math-container').on('mousedown touchstart', function(e) {
-  $(this).find('.mathquill-editable').triggerHandler(e);
+var editable = $('.math-container .mathquill-editable');
+$('.math-container').on('touchstart', function() {
+  var moved = false;
+  $(this).on('touchmove.tmp', function() { moved = true; })
+  .on('touchend.tmp', function(e) {
+    $(this).off('.tmp');
+    editable.mathquill('ignoreNextMousedown', 1000);
+    if (moved) return;
+    var touch = e.originalEvent.changedTouches[0];
+    editable.mathquill('touchtap', touch.target, touch.clientX, touch.clientY);
+  });
+}).mousedown(function(e) {
+  if (e.target === editable[0] || $.contains(editable[0], e.target)) return;
+  editable.triggerHandler(e);
 });
 
 // Selection Tests
