--- a/test/visual.html
+++ b/test/visual.html
@@ -44,7 +44,7 @@ td {
 
 /* Non-white background test */
 .different-bgcolor.mathquill-editable,
-.different-bgcolor.mathquill-editable .matrixed {
+.different-bgcolor.mathquill-editable .mq-matrixed {
   background: black;
   color: white;
 }
