Improve horizontal panning behavior #fuckyeah
First pass implementation of the behavior I want; the implementation
could almost certainly be more elegant and de-duplicated, but for how
the intuitive the behavior is it was surprisingly tricky to put into
code.

I'm actually really happy with the reward for the attention to detail
here. The basic idea, I guess, is to scroll by a minimum amount while
maximizing the amount of the selection shown, and while keeping the
cursor within the inner bounds of the textbox (i.e. 20px from the
edges).

--- a/test/visual.html
+++ b/test/visual.html
@@ -121,9 +121,10 @@ td {
 
 <p>
   <span id="overflow-test" class="mathquill-editable">
-    \frac{d}{dx}\sqrt{x}=\frac{d}{dx}x^{\frac{1}{2}}=\frac{1}{2}x^{-\frac{1}{2}}=\frac{1}{2\sqrt{x}}
+    \frac{d}{dx}\sqrt{x}=\frac{d}{dx}x^{\frac{1}{2}}=\frac{1}{2}x^{-\frac{1}{2}}=\frac{1}{2\sqrt{x}};\space\frac{1}{1,000,000,000}+1
   </span>
   (for comparison: <input value="\frac{d}{dx}\sqrt{x}=\frac{d}{dx}x^{\frac{1}{2}}=\frac{1}{2}x^{-\frac{1}{2}}=\frac{1}{2\sqrt{x}}"/>)
+  Selecting from the semicolon past the large fraction and back should pan sensibly.
 </p>
 
 <h3>Selection Tests</h3>
