--- a/test/visual.html
+++ b/test/visual.html
@@ -30,16 +30,12 @@ td {
 .show-textareas .mathquill-textbox {
   overflow: visible;
 }
-.shown-textarea {
-  position: relative;
-  display: inline;
-}
-.shown-textarea textarea {
-  position: absolute;
+.show-textareas .mq-textarea textarea {
+  clip: auto !important;
+  resize: auto !important;
+  height: auto !important;
+  width: auto !important;
   top: -45px;
-  user-select: text;
-  -moz-user-select: text;
-  -webkit-user-select: text;
 }
 
 #overflow-test {
@@ -187,23 +183,8 @@ $(function() {
   $('.mathquill-embedded-latex').mathquill();
 });
 
-var _prepend = $.fn.prepend;
 $('#show-textareas-button').click(function() {
   $(document.body).toggleClass('show-textareas');
-  $('.mq-textarea,.shown-textarea').toggleClass('mq-textarea shown-textarea');
-  if ($.fn.prepend === _prepend) {
-    //FUGLY HACK: monkey-patch jQuery to show/hide static math textareas when prepended
-    $.fn.prepend = function(el) {
-      if ($(el).hasClass('mq-textarea') && $(document.body).hasClass('show-textareas'))
-        $(el).removeClass('mq-textarea').addClass('shown-textarea');
-      else if ($(el).hasClass('shown-textarea'))
-        $(el).removeClass('shown-textarea').addClass('mq-textarea');
-      return _prepend.apply(this, arguments);
-    };
-  }
-  else {
-    $.fn.prepend = _prepend;
-  }
 });
 
 
