Fix tests after rm-ing render-on-ready code
render-on-ready rm-ed in 1d25f72314fff0f788afc0039efaee682495150b of #32

--- a/test/visual.html
+++ b/test/visual.html
@@ -180,6 +180,12 @@ window.onerror = function() {
 </script>
 <script type="text/javascript" src="../build/mathquill.js"></script>
 <script type="text/javascript">
+$(function() {
+  $('.mathquill-editable:not(.mathquill-rendered-math)').mathquill('editable');
+  $('.mathquill-textbox:not(.mathquill-rendered-math)').mathquill('textbox');
+  $('.mathquill-embedded-latex').mathquill();
+});
+
 var _prepend = $.fn.prepend;
 $('#show-textareas-button').click(function() {
   $(document.body).toggleClass('show-textareas');
