--- a/test/demo.html
+++ b/test/demo.html
@@ -62,6 +62,12 @@ code span {
 <script type="text/javascript" src="support/jquery-1.7.2.js"></script>
 <script type="text/javascript" src="../build/mathquill.js"></script>
 <script type="text/javascript">
+$(function() {
+  $('.mathquill-editable:not(.mathquill-rendered-math)').mathquill('editable');
+  $('.mathquill-textbox:not(.mathquill-rendered-math)').mathquill('textbox');
+  $('.mathquill-embedded-latex').mathquill();
+});
+
 $('#show-html-source').toggle(function() {
   $(this).html('Hide Semantically Meaningful HTML Source').parent().next().show();
 }, function() {
