--- a/test/visual.html
+++ b/test/visual.html
@@ -73,7 +73,7 @@ td {
   <td><span class="mathquill-embedded-latex">\sqrt{\MathQuillMathField{x^2+y^2}}</span>
 </table>
 
-<p>Clicks/mousedown to drag should work anywhere in the blue box: <div class="math-container" style="border: solid 1px lightblue; height: 5em; width: 15em; line-height: 5em; text-align: center; -webkit-tap-highlight-color: rgba(0,0,0,0)"><span class="mathquill-editable">a_2 x^2 + a_1 x + a_0 = 0</span></div>
+<p>Clicks/mousedown to drag should work anywhere in the blue box: <div class="math-container" style="border: solid 1px lightblue; height: 5em; width: 15em; line-height: 5em; text-align: center; -webkit-tap-highlight-color: rgba(0,0,0,0)"><span class="mathquill-editable">a_2 x^2 + a_1 x + a_0 = 0</span></div> <span style="position:relative;color:orange">(this text should appear below the cursor handle)</span>
 
 <h3>Redrawing</h3>
 <p>
