--- a/test/visual.html
+++ b/test/visual.html
@@ -118,7 +118,7 @@ td {
 
 <p>
   <span id="overflow-test" class="mathquill-editable">
-    \frac{d}{dx}\sqrt{x}=\frac{d}{dx}x^{\frac{1}{2}}=\frac{1}{2}x^{-\frac{1}{2}}=\frac{1}{2\sqrt{x}};\space\frac{1}{1,000,000,000}+1
+    \left(\sum_{n=0}^{};\space\space\space\space\frac{d}{dx}\sqrt{x}=\frac{d}{dx}x^{\frac{1}{2}}=\frac{1}{2}x^{-\frac{1}{2}}=\frac{1}{2\sqrt{x}};\space\frac{1}{1,000,000,000}+1\right)
   </span>
   (for comparison: <input value="\frac{d}{dx}\sqrt{x}=\frac{d}{dx}x^{\frac{1}{2}}=\frac{1}{2}x^{-\frac{1}{2}}=\frac{1}{2\sqrt{x}}"/>)
   Selecting from the semicolon past the large fraction and back should pan sensibly.
